# monorepo-external

./: .gitignore  .npmrc  .pnpmfile.cjs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  turbo.jsonc
apps/oapp-app/contracts/stellar/contracts/: Cargo.toml  README.md  package.json  turbo.json
apps/oapp-app/contracts/stellar/contracts/src/: oapp_options_type3.rs
apps/oapp-app/contracts/stellar/contracts/src/tests/: oapp_receiver.rs  oapp_sender.rs  test_macros.rs
apps/oapp-app/contracts/stellar/contracts/tests/: runtime.rs
apps/oapp-app/contracts/stellar/contracts/tests/runtime/oapp/: receiver.rs  sender.rs
apps/oft-app/contracts/stellar/oft/: Cargo.toml  package.json  turbo.json
apps/oft-app/contracts/stellar/oft-core/: Cargo.toml  package.json  turbo.json
apps/oft-app/contracts/stellar/oft-core/integration-tests/: setup.rs  utils.rs
apps/oft-app/contracts/stellar/oft-core/src/tests/: test_utils.rs
apps/oft-app/contracts/stellar/oft/integration-tests/: setup.rs  utils.rs
apps/oft-app/contracts/stellar/oft/integration-tests/extensions/: test_oft_fee.rs
apps/oft-app/contracts/stellar/oft/src/extensions/: oft_fee.rs
apps/oft-app/contracts/stellar/oft/src/tests/extensions/: pausable.rs  rate_limiter.rs
apps/oft-app/contracts/stellar/sac-manager/: Cargo.toml  clippy.toml  package.json  rustfmt.toml  turbo.json
apps/oft-app/contracts/stellar/sac-manager/src/tests/: mod.rs  test_helper.rs
apps/oft-app/contracts/stellar/sac-manager/src/tests/sac_manager/: mint.rs  test_helper.rs
apps/onesig-app/contracts/stellar/: .gitignore  Cargo.toml  package.json  rustfmt.toml  turbo.json
apps/onesig-app/contracts/stellar/mocks/mock_factory/: Cargo.toml
apps/onesig-app/contracts/stellar/mocks/mock_factory/src/: lib.rs
apps/onesig-app/contracts/stellar/scripts/: build-verifiable.ts
apps/onesig-app/contracts/stellar/src/: auth.rs  onesig.rs
apps/onesig-app/contracts/stellar/src/tests/: onesig.rs
apps/project-types/omni-counter-app/contracts/stellar/: Cargo.toml  package.json  turbo.json
apps/project-types/omni-counter-app/contracts/stellar/integration_tests/: setup_uln.rs
contracts/common/utils/stellar/common-utils/: Cargo.toml  package.json  turbo.json
contracts/common/utils/stellar/common-utils-macro-tests/: Cargo.toml  package.json  turbo.json
contracts/common/utils/stellar/common-utils-macro-tests/tests/: runtime.rs  testutils_is_self_contained.rs  ui_rbac.rs
contracts/common/utils/stellar/common-utils-macro-tests/tests/runtime/contract_ttl/: constructor.rs  mod.rs
contracts/common/utils/stellar/common-utils-macro-tests/tests/runtime/lz_contract/: wrapper_multisig_upgradeable.rs  wrapper_upgradeable.rs  wrapper_upgradeable_no_migration.rs
contracts/common/utils/stellar/common-utils-macro-tests/tests/runtime/storage/: keyed_roundtrip.rs  name_override_runtime.rs  unkeyed_roundtrip.rs
contracts/common/utils/stellar/common-utils-macro-tests/tests/runtime/ttl_configurable/: configuration.rs
contracts/common/utils/stellar/common-utils-macro-tests/tests/runtime/upgradeable/: migrate_guard_and_state.rs  no_migration.rs  upgrade_then_migrate.rs
contracts/common/utils/stellar/common-utils-macros/: Cargo.toml  package.json  turbo.json
contracts/common/utils/stellar/common-utils-macros/src/tests/: contract_ttl.rs  rbac.rs
contracts/common/utils/stellar/common-utils/src/: testing_utils.rs
contracts/common/utils/stellar/common-utils/src/tests/: buffer_writer.rs  bytes_ext.rs  multisig.rs  testing_utils.rs  upgradeable.rs
contracts/protocol/stellar/contracts/: .gitignore  Cargo.toml  LICENSE  package.json  rustfmt.toml  tsconfig.json  turbo.json
contracts/protocol/stellar/contracts/docs/: error-spec.md  layerzero-v2-on-stellar.md  oapp-guide.md  oft-guide.md
contracts/protocol/stellar/contracts/endpoint-v2/: Cargo.toml
contracts/protocol/stellar/contracts/endpoint-v2/src/tests/endpoint_v2/: pay_messaging_fees.rs  quote.rs  ttl_config.rs  verifiable.rs
contracts/protocol/stellar/contracts/endpoint-v2/src/tests/message_lib_manager/: require_receive_lib_for_eid.rs  require_send_lib_for_eid.rs  require_supported_eid.rs
contracts/protocol/stellar/contracts/endpoint-v2/src/tests/messaging_channel/: clear_payload.rs  inbound.rs  mod.rs  nilify.rs  pending_inbound_nonces.rs
contracts/protocol/stellar/contracts/endpoint-v2/src/tests/messaging_composer/: lz_compose_alert.rs
contracts/protocol/stellar/contracts/layerzero-views/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/blocked-message-lib/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/message-lib-common/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/message-lib-common/src/: worker_options.rs
contracts/protocol/stellar/contracts/message-libs/simple-message-lib/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/treasury/: Cargo.toml
contracts/protocol/stellar/contracts/message-libs/uln-302/: Cargo.toml
contracts/protocol/stellar/contracts/oapps/oft/integration-tests/: utils.rs
contracts/protocol/stellar/contracts/oapps/oft/src/: oft.rs
contracts/protocol/stellar/contracts/scripts/: build-verifiable.ts
contracts/protocol/stellar/contracts/upgrader/: Cargo.toml
contracts/protocol/stellar/contracts/upgrader/src/tests/: mod.rs
contracts/protocol/stellar/contracts/workers/dvn/: Cargo.toml
contracts/protocol/stellar/contracts/workers/dvn-fee-lib/: Cargo.toml
contracts/protocol/stellar/contracts/workers/executor/: Cargo.toml
contracts/protocol/stellar/contracts/workers/executor-fee-lib/: Cargo.toml
contracts/protocol/stellar/contracts/workers/executor-helper/: Cargo.toml
contracts/protocol/stellar/contracts/workers/executor-helper/src/: executor_helper.rs
contracts/protocol/stellar/contracts/workers/executor/src/: auth.rs  storage.rs
contracts/protocol/stellar/contracts/workers/fee-lib-interfaces/: Cargo.toml
contracts/protocol/stellar/contracts/workers/price-feed/: Cargo.toml
contracts/protocol/stellar/contracts/workers/worker/: Cargo.toml
(+620 files in other folders)
