[workspace]
resolver = "2"
members = [
  "mocks/mock_vault",
  "mocks/mock_chain",
  "mocks/mock_factory",
]
# NOTE: "." is intentionally NOT listed here even though this manifest also has a [package] section --
# a root package is automatically a workspace member whenever both [package] and [workspace] are
# present. Listing "." explicitly changes how cargo resolves `exclude` for vendored path deps: with
# "." present, cargo still auto-adopts anything under dependencies/ as an implicit member regardless
# of exclude (confirmed via an isolated minimal repro); omitting "." (relying on the implicit
# self-membership) makes `exclude` work as expected. Do not re-add "." here.
# @todo shankar - when resolving the bytecode. move tests outside of src/
# Vendored path deps (build-utils-rust resolve) land under dependencies/ inside this workspace root;
# exclude so cargo doesn't auto-adopt them as members and try to build their (stripped) test dirs.
exclude = ["dependencies"]

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "GPL-3.0-only"

[workspace.dependencies]
soroban-sdk = { version = "25.1.1", features = ["hazmat-address", "hazmat-crypto"] }
common-macros = { path = "dependencies/common-utils-macros-stellar-contracts" }
utils = { path = "dependencies/common-utils-stellar-contracts" }

[package]
name = "onesig"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true, features = ["hazmat-crypto"] }
common-macros = { workspace = true }
utils = { workspace = true }
cfg-if = "1.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
insta = "1.44.3"

# Fast dev builds for testing
[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256

# Optimize dependencies even in dev (compile once, run many tests)
[profile.dev.package."*"]
opt-level = 2

# Test profile optimizations
[profile.test]
opt-level = 1
incremental = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
