# @layerzerolabs/common-utils-macros-stellar-contracts. Proc-macro crate; self-contained
# version/edition/deps so it builds as a path dep and vendors cleanly into consumers.
[package]
name = "common-macros"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
heck = "0.5"
itertools = "0.14"

[dev-dependencies]
insta = "1.44.3"
prettyplease = "0.2.37"
