[package]
name = "uln302"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
# workspace dependencies
utils = { workspace = true }
common-macros = { workspace = true }
endpoint-v2 = { workspace = true, features = ["library"] }
message-lib-common = { workspace = true }

[dev-dependencies]
# self-dep to enable this crate's `testutils` for its own test build
uln302 = { path = ".", features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
endpoint-v2 = { workspace = true, features = ["testutils"] }
message-lib-common = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }