[package]
name = "dvn-fee-lib"
version.workspace = true
edition.workspace = true
publish = false

[features]
library = []
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
common-macros = { workspace = true }
utils = { workspace = true }
fee-lib-interfaces = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }