[package]
name = "executor"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
cfg-if = { workspace = true }
soroban-sdk = { workspace = true }
# workspace dependencies
utils = { workspace = true }
worker = { workspace = true }
fee-lib-interfaces = { workspace = true }
common-macros = { workspace = true }
message-lib-common = { workspace = true }
endpoint-v2 = { workspace = true, features = ["library"] }

[dev-dependencies]
# self-dep to enable this crate's `testutils` for its own test build
executor = { path = ".", features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
utils = { workspace = true, features = ["testutils"] }


